// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Component API/Forms/FormLabel Dev 1`] = `
<div
  dir="ltr"
>
  <label
    aria-required={true}
    className="fd-form-label fd-form-label--required"
  >
    Default
  </label>
</div>
`;

exports[`Storyshots Component API/Forms/FormLabel Primary 1`] = `
<div
  dir="ltr"
>
  <label
    className="fd-form-label"
  >
    Default
  </label>
</div>
`;

exports[`Storyshots Component API/Forms/FormLabel Required 1`] = `
<div
  dir="ltr"
>
  <label
    aria-required={true}
    className="fd-form-label fd-form-label--required"
  >
    Required Label
  </label>
</div>
`;
